--- a/trunk/pkg/htobit/DESCRIPTION
+++ b/trunk/pkg/htobit/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: htobit
 Title: Heteroscedastic Tobit Regression Models
-Version: 0.0-1
-Date: 2019-05-27
+Version: 0.0-2
+Date: 2018-05-27
 Authors@R: person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org")
 Depends: R (>= 3.0.0)
-Imports: stats, Formula
+Imports: stats, Formula, sandwich
 Suggests: crch, lmtest
 Description: Heteroscedastic tobit regression models are provided.
   These are Gaussian regression models with a response variable left-censored at zero
