--- a/trunk/pkg/htobit/DESCRIPTION
+++ b/trunk/pkg/htobit/DESCRIPTION
@@ -5,7 +5,7 @@ Date: 2019-05-27
 Authors@R: person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org")
 Depends: R (>= 3.0.0)
 Imports: stats, Formula, numDeriv, sandwich
-Suggests: crch, lmtest
+Suggests: boot, car, crch, lmtest, memisc
 Description: Heteroscedastic tobit regression models are provided.
   These are Gaussian regression models with a response variable left-censored at zero
   and both distribution parameters (the latent location and scale) parameters
