--- a/pkg/htobit/DESCRIPTION
+++ b/pkg/htobit/DESCRIPTION
@@ -5,7 +5,7 @@ Date: 2019-06-17
 Authors@R: person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org")
 Depends: R (>= 3.0.0)
 Imports: stats, Formula, sandwich
-Suggests: crch, lmtest
+Suggests: crch, lmtest, numDeriv
 Description: Heteroscedastic tobit regression models are provided.
   These are Gaussian regression models with a response variable left-censored at zero
   and both distribution parameters (the latent location and scale) parameters
