--- a/pkg/event2car/DESCRIPTION
+++ b/pkg/event2car/DESCRIPTION
@@ -4,7 +4,8 @@ Version: 1.0
 Authors@R: person("Lisa", "Lechner", email = "lisa.lechner@uibk.ac.at", role = c("aut", "cre"))
 Description: The package allows for the calculation of cumulative abnormal return(s) of one or several event(s) for one or multiple firm(s). The package covers three models for the calculation of the cumulative abnomral returns: the mean-adjusted model, the out-of-sample market-adjusted model, and the within-sample market adjusted mdoel. The function applies the following steps to securities' rates of returns: A) calculate abnormal returns for the estimation period, B) predict abnormal returns for event period(s), C) aggregate the predicted abnormal returns to cumulative abnormal return(s) for event dates. 
 Depends: R (>= 3.6.0)
-License: GLP-3
+Suggests: knitr
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 VignetteBuilder: knitr
