comment S3method() for functions that do not exist yet
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@48 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/LFUrmutils/NAMESPACE
+++ b/pkg/LFUrmutils/NAMESPACE
@@ -10,11 +10,11 @@ export(
 )
 
 ## methods for UniEWMA
-S3method("coef", "UniEWMA")
+## S3method("coef", "UniEWMA")
 S3method("residuals", "UniEWMA")
-S3method("print", "UniEWMA")
+## S3method("print", "UniEWMA")
 
 ## methods for MultiEWMA
-S3method("coef", "MultiEWMA")
+## S3method("coef", "MultiEWMA")
 S3method("residuals", "MultiEWMA")
-S3method("print", "MultiEWMA")
+## S3method("print", "MultiEWMA")
