day 5b: further methods: vcov(), fitted(), residuals(), summary(), print.summary() + make numDeriv::hessian the default engine for Hessian computation
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@51 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/htobit/DESCRIPTION
+++ b/pkg/htobit/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: htobit
 Title: Heteroscedastic Tobit Regression Models
 Version: 0.0-2
-Date: 2019-06-17
+Date: 2019-06-18
 Authors@R: person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org")
 Depends: R (>= 3.0.0)
-Imports: stats, Formula, sandwich
-Suggests: crch, lmtest, numDeriv
+Imports: stats, Formula, numDeriv, sandwich
+Suggests: crch, lmtest
 Description: Heteroscedastic tobit regression models are provided.
   These are Gaussian regression models with a response variable left-censored at zero
   and both distribution parameters (the latent location and scale) parameters
