day 5c: bread() method in addition to estfun() for sandwich covariances
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@52 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/htobit/NAMESPACE
+++ b/pkg/htobit/NAMESPACE
@@ -9,6 +9,7 @@ export(
 )
 
 ## methods for htobit
+S3method("bread", "htobit")
 S3method("coef", "htobit")
 S3method("estfun", "htobit")
 S3method("fitted", "htobit")
