day 5d: update() method for Boot() interface
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@53 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/htobit/NAMESPACE
+++ b/pkg/htobit/NAMESPACE
@@ -22,4 +22,5 @@ S3method("residuals", "htobit")
 S3method("summary", "htobit")
 S3method("print", "summary.htobit")
 S3method("terms", "htobit")
+S3method("update", "htobit")
 S3method("vcov", "htobit")
