day 6b: added vignettes (both Sweave/Rnw and knitr/Rmd)
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@56 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/htobit/DESCRIPTION
+++ b/pkg/htobit/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: htobit
 Title: Heteroscedastic Tobit Regression Models
-Version: 0.0-2
+Version: 0.0-3
 Date: 2019-06-19
 Authors@R: person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org")
 Depends: R (>= 3.0.0)
 Imports: stats, Formula, numDeriv, sandwich
-Suggests: car, crch, lmtest, memisc
+Suggests: car, crch, knitr, lmtest, memisc
+VignetteBuilder: knitr
 Description: Heteroscedastic tobit regression models are provided.
   These are Gaussian regression models with a response variable left-censored at zero
   and both distribution parameters (the latent location and scale) parameters
