--- a/pkg/htobit/DESCRIPTION
+++ b/pkg/htobit/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: htobit
 Title: Heteroscedastic Tobit Regression Models
-Version: 0.0-3
+Version: 0.1-0
 Date: 2019-06-19
-Authors@R: person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org")
+Authors@R: person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org",
+                  comment = c(ORCID = "0000-0003-0918-3766"))
 Depends: R (>= 3.0.0)
 Imports: stats, Formula, numDeriv, sandwich
 Suggests: car, crch, knitr, lmtest, memisc
 VignetteBuilder: knitr
 Description: Heteroscedastic tobit regression models are provided.
   These are Gaussian regression models with a response variable left-censored at zero
-  and both distribution parameters (the latent location and scale) parameters
+  and both distribution parameters (the latent location and scale)
   can depend on covariates. An identity link is employed for the location
   equation and a log link for the scale equation.
 License: GPL-2 | GPL-3
+RoxygenNote: 6.1.1
