--- a/pkg/LFUrmutils/DESCRIPTION
+++ b/pkg/LFUrmutils/DESCRIPTION
@@ -1,10 +1,8 @@
 Package: LFUrmutils
 Title: LFU risk management utilities
-Version: 0.0-1
-Date: 2019-06-11
-Authors@R: c(person(given = "Bernhard", family = "Eder", role = c("aut", "cre"), email = "bernhard.eder@uibk.ac.at"), 
-  person(given = "David", family = "Ruppert", role = c("ctb"), email = "dr24@cornell.edu"), 
-  person(given = "David S.", family = "Matteson", role = c("ctb"), email = "matteson@cornell.edu"))
+Version: 0.0-2
+Date: 2019-07-09
+Authors@R: person(given = "Bernhard", family = "Eder", role = c("aut", "cre"), email = "bernhard.eder@uibk.ac.at")
 Depends: R (>= 3.0.0)
 Imports: RQuantLib, stats, tseries, zoo
 Suggests: fGarch, lmtest, MTS, rugarch, rmgarch, xts
