git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@84 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/bcVAR/NAMESPACE
+++ b/pkg/bcVAR/NAMESPACE
@@ -1,27 +1,6 @@
-import("stats", "Formula")
-importFrom("sandwich", "bread", "estfun")
-importFrom("numDeriv", "grad", "hessian")
+export(bcVAR)
 
-export(
-  "htobit",
-  "htobit_control",
-  "htobit_fit",
-  "getSummary.htobit"
-)
+importFrom("matrixcalc", "vec")
+importFrom("stats", "lm.fit")
 
-## methods for htobit
-S3method("bread", "htobit")
-S3method("coef", "htobit")
-S3method("estfun", "htobit")
-S3method("fitted", "htobit")
-S3method("logLik", "htobit")
-S3method("model.frame", "htobit")
-S3method("model.matrix", "htobit")
-S3method("predict", "htobit")
-S3method("print", "htobit")
-S3method("residuals", "htobit")
-S3method("summary", "htobit")
-S3method("print", "summary.htobit")
-S3method("terms", "htobit")
-S3method("update", "htobit")
-S3method("vcov", "htobit")
+
