--- a/pkg/bcVAR/DESCRIPTION
+++ b/pkg/bcVAR/DESCRIPTION
@@ -1,15 +1,12 @@
 Package: bcVAR
-Title: Heteroscedastic Tobit Regression Models
+Title: Bias-corrected LS for Vector Autoregressive Models
 Version: 0.1-0
-Date: 2019-05-27
-Authors@R: person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org")
+Date: 2019-06-07
+Authors@R: person(given = "Simon", family = "Roeck", role = c("aut", "cre"), email = "simon-roeck@student.uibk.ac.at")
 Depends: R (>= 3.0.0)
-Imports: stats, Formula, numDeriv, sandwich
-Suggests: boot, car, crch, knitr, lmtest, memisc, rmarkdown
-VignetteBuilder: knitr
-Description: Heteroscedastic tobit regression models are provided.
-  These are Gaussian regression models with a response variable left-censored at zero
-  and both distribution parameters (the latent location and scale) parameters
-  can depend on covariates. An identity link is employed for the location
-  equation and a log link for the scale equation.
+Imports: matrixcalc
+Description: Bias-corrected LS for Vector Autoregressive models are provided.
+Author: Simon Roeck [aut, cre]
+Maintainer: Simon Roeck <simon-roeck@student.uibk.ac.at>
 License: GPL-2 | GPL-3
+
