--- a/pkg/LFUrmutils/DESCRIPTION
+++ b/pkg/LFUrmutils/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: LFUrmutils
-Title: LFU risk management utilities
+Title: LFU Risk Management Utilities
 Version: 0.0-3
 Date: 2019-07-09
 Authors@R: person(given = "Bernhard", family = "Eder", role = c("aut", "cre"), email = "bernhard.eder@uibk.ac.at")
