Include plot method for objects of class MultiEWMA in Namespace; add keywords and condepts to documentation; update vignette.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@97 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/LFUrmutils/NAMESPACE
+++ b/pkg/LFUrmutils/NAMESPACE
@@ -30,6 +30,7 @@ S3method("ccor", "MultiEWMA")
 S3method("fitted", "MultiEWMA")
 S3method("logLik", "MultiEWMA")
 S3method("mse", "MultiEWMA")
+S3method("plot", "MultiEWMA")
 S3method("residuals", "MultiEWMA")
 S3method("varcov", "MultiEWMA")
 S3method("vola", "MultiEWMA")
