--- a/pkg/LFUrmutils/DESCRIPTION
+++ b/pkg/LFUrmutils/DESCRIPTION
@@ -1,8 +1,11 @@
 Package: LFUrmutils
 Title: LFU Risk Management Utilities
-Version: 0.1-1
+Version: 0.1-2
 Date: 2019-07-09
-Authors@R: person(given = "Bernhard", family = "Eder", role = c("aut", "cre"), email = "bernhard.eder@uibk.ac.at")
+Authors@R: c(person(given = "Bernhard", family = "Eder", role = c("aut", "cre"), email = "bernhard.eder@uibk.ac.at"), 
+  person(given = "David", family = "Ruppert", role = "ctb"), 
+  person(given = "David S.", family = "Matteson", role = "ctb"), 
+  person(given = "Diethelm", family = "Wuertz", role = "ctb"))
 Depends: R (>= 3.5.0)
 Imports: graphics, grDevices, RQuantLib, stats, utils, zoo
 Suggests: fGarch, knitr, lmtest, MTS, rugarch, rmgarch
