--- a/pkg/bcVAR/DESCRIPTION
+++ b/pkg/bcVAR/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.1-0
 Date: 2019-06-07
 Authors@R: person(given = "Simon", family = "Roeck", role = c("aut", "cre"), email = "simon-roeck@student.uibk.ac.at")
 Depends: R (>= 3.0.0)
-Imports: matrixcalc
+Imports: matrixcalc, vars
 Description: Bias-corrected LS for Vector Autoregressive models are provided.
 Author: Simon Roeck [aut, cre]
 Maintainer: Simon Roeck <simon-roeck@student.uibk.ac.at>
