--- a/pkg/bcVAR/DESCRIPTION
+++ b/pkg/bcVAR/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: bcVAR
-Title: Bias-corrected LS for Vector Autoregressive Models
+Title: Bias-Corrected Least Squares for Vector Autoregressive Models
 Version: 0.1-0
 Date: 2019-06-07
 Authors@R: person(given = "Simon", family = "Roeck", role = c("aut", "cre"), email = "simon-roeck@student.uibk.ac.at")
 Depends: R (>= 3.0.0)
 Imports: matrixcalc, vars
-Description: Bias-corrected LS for Vector Autoregressive models are provided.
+Description: Bias-corrected least squares for vector autoregressive models are provided.
 Author: Simon Roeck [aut, cre]
 Maintainer: Simon Roeck <simon-roeck@student.uibk.ac.at>
 License: GPL-2 | GPL-3
