import sandwich::bread, only register but not export S3 methods
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@108 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/ppml/NAMESPACE
+++ b/pkg/ppml/NAMESPACE
@@ -1,11 +1,12 @@
 ## export functions of package
-export("ppml", "bread.ppml", "vcov.ppml", "summary.ppml")
+export("ppml")
 
 ## methods for ppml
+S3method("bread", "ppml")
 S3method("vcov", "ppml")
 S3method("summary", "ppml")
 
 ## import functions of other packages
-importFrom("sandwich", "sandwich")
+importFrom("sandwich", "bread", "sandwich")
 importFrom("lmtest", "coeftest")
 importFrom("stats", "glm", "quasipoisson", "summary.glm")
