minor changes in "summary.ivol"
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@115 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/ivol/NAMESPACE
+++ b/pkg/ivol/NAMESPACE
@@ -1,5 +1,6 @@
 importFrom("graphics", "abline", "par", "plot")
 importFrom("stats", "lm.fit", "quantile", "sd")
+importFrom("utils", "tail")
 
 export(
   "ihurst",
@@ -9,3 +10,4 @@ export(
 ## methods for ivol
 S3method("summary", "ivol")
 S3method("plot", "ivol")
+S3method("print", "ivol")
