--- a/pkg/ivol/DESCRIPTION
+++ b/pkg/ivol/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2019-09-12
 Title: Option-implied Informations
 Authors@R: person("Wolfgang", "Schadner", role=c("aut", "cre"), email="Wolfgang.Schadner@uibk.ac.at")
 Depends: R (>= 3.4.0)
-Imports: graphics, stats
+Imports: graphics, stats, utils
 Suggests: 
     xts,
     knitr,
