added "keep xts/zoo"
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@119 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/ivol/NAMESPACE
+++ b/pkg/ivol/NAMESPACE
@@ -1,6 +1,9 @@
 importFrom("graphics", "abline", "par", "plot")
-importFrom("stats", "lm.fit", "quantile", "sd")
+importFrom("stats", "lm.fit", "quantile", "sd", "coef")
 importFrom("utils", "tail")
+importFrom("grDevices", "dev.interactive", "devAskNewPage")
+importFrom("xts", "xts", "is.xts")
+importFrom("zoo", "zoo", "is.zoo", "index")
 
 export(
   "ihurst",
