--- a/pkg/ivol/DESCRIPTION
+++ b/pkg/ivol/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: ivol
-Version: 0.1-2
+Version: 0.1-4
 Date: 2019-09-12
 Title: Option-implied Informations
-Authors@R: person("Wolfgang", "Schadner", role=c("aut", "cre"), email="Wolfgang.Schadner@uibk.ac.at")
+Authors@R: c(person("Wolfgang", "Schadner", role=c("aut", "cre"), email="Wolfgang.Schadner@uibk.ac.at"), 
+            person("Achim", "Zeileis", role = "ctb"))
 Depends: R (>= 3.4.0)
-Imports: graphics, stats, utils
+Imports: graphics, stats, utils, xts, zoo
 Suggests: 
-    xts,
     knitr,
     rmarkdown
 Description: Estimating time series of risk-neutral momentum or moments out of option implied volatility surfaces.
