--- a/pkg/ivol/NAMESPACE
+++ b/pkg/ivol/NAMESPACE
@@ -1,8 +1,8 @@
+import("xts")
 importFrom("graphics", "abline", "par", "plot")
 importFrom("stats", "lm.fit", "quantile", "sd", "coef")
 importFrom("utils", "tail")
 importFrom("grDevices", "dev.interactive", "devAskNewPage")
-importFrom("xts", "xts", "is.xts")
 importFrom("zoo", "zoo", "is.zoo", "index")
 
 export(
