--- a/pkg/LFUrmutils/DESCRIPTION
+++ b/pkg/LFUrmutils/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: LFUrmutils
 Title: LFU Risk Management Utilities
-Version: 0.1-2
-Date: 2019-07-09
+Version: 0.1-3
+Date: 2019-12-03
 Authors@R: c(person(given = "Bernhard", family = "Eder", role = c("aut", "cre"), email = "bernhard.eder@uibk.ac.at"), 
   person(given = "David", family = "Ruppert", role = "ctb"), 
   person(given = "David S.", family = "Matteson", role = "ctb"), 
@@ -15,3 +15,10 @@ Description: Utility functions for the bachelor's seminar in risk management at 
   and some convenience functions to make the output of various volatility models compareable, as well as a function to 
   compute the corresponding mean squared errors.
 License: GPL-2 | GPL-3
+NeedsCompilation: no
+Packaged: 2019-12-03 10:54:32 UTC; c4341068
+Author: Bernhard Eder [aut, cre],
+  David Ruppert [ctb],
+  David S. Matteson [ctb],
+  Diethelm Wuertz [ctb]
+Maintainer: Bernhard Eder <bernhard.eder@uibk.ac.at>
